# LRay

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  Vec4.cpp  Vec4.hpp  headers.cmake  main.c  main.cpp  sources.cmake
src/: CMakeLists.txt  headers.cmake  main.cpp  sources.cmake
src/io/: io.c
src/math/: quaternion.c  quaternion.h  vec4.c  vec4.h  vec4_shared.h
src/renderer/: camera.c  camera.h  light.c  light.h  object.c  object.h  ray.c  ray.h  ray.repr.h  scene.c  scene.h
src/vector/: Vec4.hpp
